@@ -1,45 +1,58 @@
 package cs665.tbconde.finalProject.behavioralPatterns.observer;
 
-import java.util.ArrayList;
+
+import java.util.LinkedList;
 
 public class WaitListNotificationSubject implements Subject {
-    private ArrayList<Observer> observers;
+    private Observer fixedObserver;
+    private LinkedList<Observer> observersQueue;
     private String message;
     public WaitListNotificationSubject() {
-        observers = new ArrayList<Observer>();
+        observersQueue = new LinkedList<>();
+        fixedObserver = new ChairpersonObserver(this);
     }
 
-    public Observer update(String message) {
+    public Observer enrollNext(String message) {
         this.message = message;
-        Observer nextInQueue = observers.get(0);
-        this.unsubscribe(nextInQueue);
+        Observer nextInQueue = observersQueue.getFirst();
         this.notifySubscribers();
+        this.unsubscribe(nextInQueue);
         return nextInQueue;
     }
 
     @Override
-    public void subscribe(Observer o) {
-        observers.add(o);
+    public void updateMessage(String message) {
+        this.message = message;
+        this.notifySubscribers();
     }
 
     @Override
+    public void subscribe(Observer o) {
+        observersQueue.addLast(o);
+    }
+
+    public void unsubscribe() {
+        observersQueue.poll();
+    }
+    @Override
     public void unsubscribe(Observer o) {
-        observers.remove(o);
+        observersQueue.remove(o);
     }
 
     @Override
     public void notifySubscribers() {
-        for (Observer o : observers) {
+        fixedObserver.alert(this.message);
+        for (Observer o : observersQueue) {
             o.alert(this.message);
         }
     }
     @Override
     public int position(Observer o) {
-        return observers.indexOf(o) + 1;
+        return observersQueue.indexOf(o) + 1;
     }
 
     @Override
     public int size() {
-        return this.observers.size();
+        return this.observersQueue.size();
     }
 }
